--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Aleo' rel='stylesheet'>
   <script src="https://openlayers.org/en/v4.6.5/build/ol.js" type="text/javascript"></script>
 </head>
 <body>
