--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="https://openlayers.org/en/v4.6.5/css/ol.css" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Aleo' rel='stylesheet'>
   <script src="https://openlayers.org/en/v4.6.5/build/ol.js" type="text/javascript"></script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
